...
                                <rect key="frame" x="10" y="5" width="37" height="37"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Centers and zooms to the current location on the map" label="Current Location"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="37" id="c3R-bu-tUB"/>
...
                                        <rect key="frame" x="8" y="21" width="124" height="1"/>
                                        <color key="tintColor" red="1" green="0.95292711215684778" blue="0.66601474782793679" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" hint="Adjusts the opacity of the parking category legends on the map" label="Legend Opacity"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                        <rect key="frame" x="0.0" y="1060" width="37" height="37"/>
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" hint="Opens the settings screen" label="Settings"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="37" id="Fte-sv-aDN"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="37" height="37"/>
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" hint="Marks the current location as your parking spot" identifier="ParkHere" label="Park"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="37" id="Ugb-FN-vj0"/>
...
                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                            <state key="normal" title="Done">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </state>
...
                                                    <rect key="frame" x="-4" y="10" width="548" height="30"/>
                                                    <segments>
                                                        <segment title="SDOT"/>
                                                        <segment title="Fast"/>
                                                        <segment title="Bing"/>
                                                    </segments>
                                                    <connections>
...
