...
    {
        return;
    }
    
    [UIView animateWithDuration:.3
                     animations:^{
                         [self.legendsButton setTitle:NSLocalizedString(@"Guide", nil)
                                             forState:UIControlStateNormal];
                         self.legendsButton.userInteractionEnabled = YES;
                         
                         // Otherwise the callout (willShowForFeature) will override this for us
                         if (![ParkingManager sharedManager].currentSpot)
                         {
...
